--- a/index.html
+++ b/index.html
@@ -28,21 +28,142 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        <h1>
+<a id="srya_extractor" class="anchor" href="#srya_extractor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SRYA_extractor</h1>
+<p>SRYA_extractor : IDR Roles y autorizaciones</p>
+<p><strong>Extractor para el análisis de roles y Segregación funciones</strong>. Además de extraer el uso del sistema por parte de los usuarios, extrae información de los roles del sistema, su asignación a los usuarios e información general de los usuarios.</p>
+<p>El extractor esta formado por un solo report <strong>-Z_IDR_SRYA_EXTRACTOR-</strong> autocontenido - no necesita ningún componente <em>no estándar</em> adicional.</p>
+<h2>
+<a id="información-extraída-en-la-versión-actual-13" class="anchor" href="#informaci%C3%B3n-extra%C3%ADda-en-la-versi%C3%B3n-actual-13" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Información extraída en la versión actual 1.3</h2>
+<p>La versión actual del extractor obtiene la siguiente información del sistema:</p>
+<ol>
+<li>
+<strong>Uso</strong>: Uso del sistema por parte de los usuarios.</li>
+<li>
+<strong>Usuarios y Roles</strong> : Información de Roles, Autorizaciones y su asignación a usuarios.</li>
+<li>
+<strong>Transacciones</strong>: Información de las transacciones del sistema.</li>
+<li>
+<strong>Licencias</strong>: Información sobre el tipo de licencias de los usuarios.</li>
+</ol>
+<h2>
+<a id="método-de-despliegue-del-report-en-el-sistema" class="anchor" href="#m%C3%A9todo-de-despliegue-del-report-en-el-sistema" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Método de despliegue del report en el sistema</h2>
+<p>Según cualquiera de las siguientes opciones:</p>
+<ol>
+<li>
+<p>Creación del report <strong>de forma manual:</strong></p>
+<ol>
+<li>Creación del report Z_IDR_SRYA_EXTRACTOR mediante la transacción SE38 o SE80</li>
+<li>Copiar el código fuente del fichero -REPS Z_IDR_SRYA_EXTRACTOR.abap- ubicado en <img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/objects/PROG/Z_IDR_SRYA_EXTRACTOR/REPS%20Z_IDR_SRYA_EXTRACTOR.abap" alt="/objects/PROG/Z_IDR_SRYA_EXTRACTOR">
+</li>
+<li>Grabar y report , meterlo en una Orden de transporte</li>
+<li>Desplegarlo en el entorno en donde se realizar la extracción</li>
+</ol>
+</li>
+<li>
+<p>Mediante Importación de <strong>orden de transporte:</strong></p>
+<ol>
+<li>Se descarga la última orden de transporte de la ubicación  <img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/ChangeRequest" alt="/SRYA_extractor/ChangeRequest/">.</li>
+<li>Se importa la orden en el <em>TMS - Transport Management System</em> - <em>Transacción STMS</em>
+</li>
+<li>Se despliega la orden el entorno en donde se va a realizar la extracción</li>
+</ol>
+</li>
+<li>
+<p>Mediante Clonado/Copia del repositorio <strong>GitHub:</strong> <em>(Solo S4 y abapGIT)</em></p>
+<ol>
+<li>Sistemas <strong>S4</strong> con gCTS: Clonado del repositorio <strong>SRYA_extractor</strong> en landscape destino y despliegue en el entorno donde se va a realizar la extracción.</li>
+<li>Sistemas <strong>no S4 con <img src="https://github.com/larshp/abapGit.git" alt="abapGIT"></strong>: Clonado del repositorio <strong>SRYA_extractor</strong> en landscape destino y despliegue en el entorno donde se va a realizar la extracción.</li>
+</ol>
+</li>
+</ol>
+<h2>
+<a id="ejecución-del-scan" class="anchor" href="#ejecuci%C3%B3n-del-scan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ejecución del Scan</h2>
+<p>Los requisitos para poder ejecutar el report son :</p>
+<ol>
+<li>Estar loggados en el sistema de la extracción en <strong>idioma inglés</strong>
+</li>
+<li>El usuario que le ejecute debe tener el perfil estándar <strong>S_TOOL_EX</strong>
+</li>
+</ol>
+<p>El report tiene 6 partes diferenciadas:<br>
+<strong>1.Customer</strong>: información del cliente.</p>
+<p><strong>2.Uso</strong>: información de uso del sistema.</p>
+<p><strong>3.Roles &amp; Ususarios</strong>: información de los Roles y Usuarios.</p>
+<p><strong>4.licencias</strong>:información sobre el tipo de licencias de los usuarios.</p>
+<p><strong>5.General</strong>: información general.</p>
+<p><strong>6.Anonimización</strong>: Información sobre los usuarios anonimizados.</p>
+<p>Debido a lo heterogeneo y ocasionalmente voluminoso de la información a extraer, el report deposita la información extraída en un directorio del servidor de aplicación permitiendo así la ejecución del report en modo backgorund.</p>
+<p>El report se ejecuta directamente desde la <strong>SE38</strong>:
+<img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/Z_IDR_SRYA_EXTRACTOR_1000.png?raw=true" alt="Pantalla de selección"></p>
+<p><strong>Pantalla de Selección</strong></p>
+<p><strong>1.Customer</strong>:Información del cliente, solo tiene el parámetro obligatorio <em>Customer name</em>, este parámetro sirve para generar el nombre de los ficheros y poder ser identificados de forma automática en el sistema.</p>
+<p><strong>2.Uso</strong>: Información de los datos de uso, tiene los siguientes parámetros:</p>
+<ul>
+<li>
+<strong><em>Use Data generation</em></strong>   : <em>Grabar fichero de uso</em> = "X".</li>
+<li>
+<strong><em>Period</em></strong> : <em>Periodo de análisis</em> En principio los análisis siempre serán mensuales = "M".</li>
+<li>
+<strong><em>Date</em></strong>   : <em>Fecha de análisis (Cualquier del mes a analizar)</em>  = Por defecto se rellena con el primer día del mes anterior a la fecha del sistema.</li>
+<li>
+<strong><em>Use Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente.</li>
+</ul>
+<p>El primer parámetro indica que se quiere generar la información de uso, después se índica la fecha, la recomendación es generar la información entre <strong><em>los 3 y 6 últimos meses de uso</em></strong>. La mejor opción es seleccioinar el primer día de cada mes. E.g: si se desea generar la información de los tres últimos meses y hoy es <em>09.07.2020</em>  habrá que hacer tres lanzamientos con las fechas _01.06.2020, 01.05.2020 y 01.04.2020 -.</p>
+<p>El nombre de todos los ficheros se genera automáticamente, se recomienda no modificar el nombre de los ficheros salvo el directorio que por defecto es el <strong><em>tmp</em></strong>.</p>
+<p><strong>3.Roles &amp; Usuarios</strong>: información sobre los Roles del sistema, su jerarquía y autorizaciones. Por otro lado extrae información de los usuarios y la asignaciones de Roles y Usuarios.</p>
+<ul>
+<li>
+<strong><em>R &amp; U Data Generation</em></strong> : <em>Grabar ficheros datos R &amp; U</em> = "X".</li>
+<li>
+<strong><em>AGR Roles Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Asignación de Roles a usuarios</em>
+</li>
+<li>
+<strong><em>AGR Define Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Definición de Roles</em>
+</li>
+<li>
+<strong><em>AGR 1251 Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Autorizaciones</em>
+</li>
+<li>
+<strong><em>AGR Prof Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Perfiles</em>
+</li>
+<li>
+<strong><em>USER General Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Datos generales usuario</em>
+</li>
+</ul>
+<p>Al marcar el parámetro <strong><em>R &amp; U Data Generation</em></strong> - se generan cinco ficheros que son volcados en el <em>file system</em> del servidor. El nombre de los ficheros es autogenerado. Se recomienda no modificar ningún nombre de fichero salvo que se quiera cambiar el directorio de grabación.</p>
+<p>En general la ejecución de está sección no debería tener problema de lanzarse Online.</p>
+<p><strong>4.Licencias</strong>: información sobre el tipo de licencia que tienen los usuarios del sistema.</p>
+<ul>
+<li>
+<strong><em>License Data Generation</em></strong> : <em>Grabar fichero de Datos de Licencia</em> = "X".</li>
+<li>
+<strong><em>User License Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Tipo de licencia por usuario</em>
+</li>
+</ul>
+<p>Al marcar el parámetro <strong><em>License Data Generation</em></strong> - se genera un fichero que es volcado en el <em>file system</em> del servidor. El nombre del fichero es autogenerado. Se recomienda no modificar ningún nombre de fichero salvo que se quiera cambiar el directorio de grabación.</p>
+<p><strong>5.General</strong>: información general.</p>
+<ul>
+<li>
+<strong><em>General Data Generation</em></strong> : <em>Grabar fichero de Datos Generales</em> = "X".</li>
+<li>
+<strong><em>Transaction Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Transacciones del sistema</em>
+</li>
+</ul>
+<p>Al marcar el parámetro <strong><em>General Data Generation</em></strong>  - se genera un fichero que es volcado en el <em>file system</em> del servidor. El nombre del fichero es autogenerado. Se recomienda no modificar ningún nombre de fichero salvo que se quiera cambiar el directorio de grabación.</p>
+<p><strong>6.User Anonimization</strong>: Anonimización de los datos de usuario.</p>
+<ul>
+<li>
+<strong><em>User Alias Generation</em></strong> : <em>Grabar fichero de Alias</em> = "X".</li>
+<li>
+<strong><em>Alias Data File</em></strong> : <em>Nombre del fichero</em> Generado automáticamente. <em>Matriz Código Usuario - Alias</em>
+</li>
+</ul>
+<p>Al marcar el parámetro <strong><em>User Alias Generation</em></strong>  - se genera un fichero que es volcado en el <em>file system</em> del servidor. El nombre del fichero es autogenerado. Se recomienda no modificar ningún nombre de fichero salvo que se quiera cambiar el directorio de grabación.</p>
+<p>Al marcar el parámetro <strong><em>User Alias Generation</em></strong>  además se anonimizan todos los ficheros donde aparezca el nombre del usuario, la forma de realizar esta anonimización es sustituyendo el código de usario por un alias autogenerado en todos los ficheros donde aparece el código de usuario: (<strong><em>Use Data File , AGR Roles Data File y USER General Data File</em></strong>). El fichero <em>Alias Data File</em> tiene el <em>matching</em> del Código de usuario y el Alias. Este fichero no debe enviarse, se lo debe quedar el cliente para posteriormente poder identificar los usuarios en base a los Alias que son los únicos que apareceran en el informe. De esta forma Novis Euforia solo tiene acceso a información de los alias.</p>
+<h2>
+<a id="enviío-de-los-resultados-del-scan" class="anchor" href="#envi%C3%ADo-de-los-resultados-del-scan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Enviío de los resultados del Scan.</h2>
+<p>Una vez terminado el scan con todos los ficheros hay que descargarlos del servidor <em><strong>transacción CG3Y</strong></em> , zippearlos y enviarlos según el modo que se haya indicado.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/NovisEuforia">NovisEuforia</a></p>
