Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <p><strong>6.Anonimización</strong>: Información sobre los usuarios anonimizados.</p>
 <p>Debido a lo heterogeneo y ocasionalmente voluminoso de la información a extraer, el report deposita la información extraída en un directorio del servidor de aplicación permitiendo así la ejecución del report en modo backgorund.</p>
 <p>El report se ejecuta directamente desde la <strong>SE38</strong>:</p>
-<p><a href="https://noviseuforia.github.io/SRYA_extractor/files/Z_IDR_SRYA_EXTRACTOR_1000.png">Pantalla de selección</a></p>
+<p><img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/Z_IDR_SRYA_EXTRACTOR_DYNP1000.png" alt="Pantalla de selección"></p>
 <p><strong>Pantalla de Selección</strong></p>
 <p><strong>1.Customer</strong>:Información del cliente, solo tiene el parámetro obligatorio <em>Customer name</em>, este parámetro sirve para generar el nombre de los ficheros y poder ser identificados de forma automática en el sistema.</p>
 <p><strong>2.Uso</strong>: Información de los datos de uso, tiene los siguientes parámetros:</p>
