--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/NovisTaza.jpg?raw=true" alt="Novis Euforia Mood"></p>
         <h1>Srya extractor</h1>
         <p>SRYA_extractor</p>
 
