--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/NovisTaza.jpg?raw=true" alt="Novis Euforia Mood"></p>
+        <!--<img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/NovisTaza.jpg?raw=true" alt="Novis Euforia Mood"></p>-->
         <h1>Srya extractor</h1>
         <p>SRYA_extractor</p>
 
@@ -29,6 +29,7 @@
         </ul>
       </header>
       <section>
+        <img src="https://github.com/NovisEuforia/SRYA_extractor/blob/master/files/NovisTaza.jpg?raw=true" alt="Novis Euforia Mood"></p>
         <h1>
 <a id="srya_extractor" class="anchor" href="#srya_extractor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SRYA_extractor</h1>
 <p>SRYA_extractor : IDR Roles y autorizaciones</p>
